--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -33,10 +33,10 @@ body {
   font-family: 'Poppins', sans-serif;
   line-height: 1.5;
   font-size: 1rem;
-  font-weight: 300;
+  font-weight: 400;
   overflow-x: hidden;
   color: $blue-dark-color;
-
+  -webkit-font-smoothing: antialiased
 }
 
 #app {
@@ -178,8 +178,13 @@ a {
   margin-bottom: 2.5rem;
 
   h2 {
-    font-size: 2.5rem;
+    font-size: 1.5rem;
     text-transform: capitalize;
+    color: $main-color;
+
+    @media (min-width: $break-p-lg) {
+      font-size: 2rem;
+    }
   }
 }
 
